{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 42,
  "lineage": "9df1b3d1-2e2f-2a7e-9906-7c8e300d294a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/regions/australia-southeast1/networkEndpointGroups/plant-tracker-neg-dev",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-24T03:54:07.521-07:00",
            "description": "Plant Tracker — Cloud Run backend with Cloud CDN",
            "enable_cdn": true,
            "fingerprint": "2q2_kXMe0U8=",
            "generated_id": 2808857487370867616,
            "id": "projects/home-plant-tracker-491202/global/backendServices/plant-tracker-backend-dev",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "plant-tracker-backend-dev",
            "port_name": "http",
            "project": "home-plant-tracker-491202",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/backendServices/plant-tracker-backend-dev",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.app",
            "google_compute_region_network_endpoint_group.app",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.171.135",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-24T03:45:03.866-07:00",
            "id": "projects/home-plant-tracker-491202/global/addresses/plant-tracker-ip-dev",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "plant-tracker-ip-dev",
            "prefix_length": 0,
            "project": "home-plant-tracker-491202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/addresses/plant-tracker-ip-dev"
          },
          "dependencies": [
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/home-plant-tracker-491202/global/forwardingRules/plant-tracker-http-forwarding-dev",
            "ip_address": "34.160.171.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "plant-tracker-http-forwarding-dev",
            "port_range": "80-80",
            "project": "home-plant-tracker-491202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/forwardingRules/plant-tracker-http-forwarding-dev",
            "target": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/targetHttpProxies/plant-tracker-http-proxy-dev"
          },
          "dependencies": [
            "google_compute_global_address.app",
            "google_compute_target_http_proxy.redirect",
            "google_compute_url_map.http_redirect",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/home-plant-tracker-491202/global/forwardingRules/plant-tracker-https-forwarding-dev",
            "ip_address": "34.160.171.135",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "plant-tracker-https-forwarding-dev",
            "port_range": "443-443",
            "project": "home-plant-tracker-491202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/forwardingRules/plant-tracker-https-forwarding-dev",
            "target": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/targetHttpsProxies/plant-tracker-https-proxy-dev"
          },
          "dependencies": [
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.app",
            "google_compute_global_address.app",
            "google_compute_managed_ssl_certificate.app",
            "google_compute_region_network_endpoint_group.app",
            "google_compute_target_https_proxy.app",
            "google_compute_url_map.app_https",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-24T03:45:07.966-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/home-plant-tracker-491202/global/targetHttpProxies/plant-tracker-http-proxy-dev",
            "name": "plant-tracker-http-proxy-dev",
            "project": "home-plant-tracker-491202",
            "proxy_bind": false,
            "proxy_id": 6322183015156930012,
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/targetHttpProxies/plant-tracker-http-proxy-dev",
            "url_map": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-http-redirect-dev"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-24T03:54:55.988-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/home-plant-tracker-491202/global/targetHttpsProxies/plant-tracker-https-proxy-dev",
            "name": "plant-tracker-https-proxy-dev",
            "project": "home-plant-tracker-491202",
            "proxy_bind": false,
            "proxy_id": 1682663255009383312,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/targetHttpsProxies/plant-tracker-https-proxy-dev",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/sslCertificates/plant-tracker-cert-dev"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-url-map-dev"
          },
          "dependencies": [
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.app",
            "google_compute_managed_ssl_certificate.app",
            "google_compute_region_network_endpoint_group.app",
            "google_compute_url_map.app_https",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-24T03:54:41.628-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/backendServices/plant-tracker-backend-dev",
            "default_url_redirect": [],
            "description": "Plant Tracker HTTPS routing",
            "fingerprint": "5lOhTAOmKHs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-url-map-dev",
            "map_id": 8882706216244990878,
            "name": "plant-tracker-url-map-dev",
            "path_matcher": [],
            "project": "home-plant-tracker-491202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-url-map-dev",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.app",
            "google_compute_region_network_endpoint_group.app",
            "google_project_service.apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-24T03:44:55.147-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "0aFfWwwjgEk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-http-redirect-dev",
            "map_id": 3139397216988288456,
            "name": "plant-tracker-http-redirect-dev",
            "path_matcher": [],
            "project": "home-plant-tracker-491202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/home-plant-tracker-491202/global/urlMaps/plant-tracker-http-redirect-dev",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}